--- a/andet.html
+++ b/andet.html
@@ -19,12 +19,38 @@
     </a>
     <div id="headericons">
       <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
-      <a href="burger">
-        <div id="burgermenu">
-          <div class="burger"></div>
-          <div class="burger"></div>
-          <div class="burger"></div>
-        </div>
+      <div class="burgercontainer">
+        <nav class="navbar">
+          <div class="burger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+          </div>
+
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="omnaturkost.html" class="nav-link">Om Naturkost</a>
+            </li>
+            <li class="nav-item">
+              <a href="mad.html" class="nav-link">Mad</a>
+            </li>
+            <li class="nav-item">
+              <a href="hverdag.html" class="nav-link">Hverdag</a>
+            </li>
+            <li class="nav-item">
+              <a href="sundhed.html" class="nav-link">Sundhed</a>
+            </li>
+            <li class="nav-item">
+              <a href="andet.html" class="nav-link">Andet</a>
+            </li>
+            <li class="nav-item">
+              <a href="kontakt.html" class="nav-link">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <script src="burgerscript.js"></script>
   </header>
 <!-- MENU -->
   <ul class="menu">
