--- a/main.html
+++ b/main.html
@@ -14,49 +14,87 @@
 <body>
   <header>
     <a href="main.html">
-    <img id="logo" src="img/logo/naturkostbladslog01.png" alt="vores logo">
+      <img id="logo" src="img/logo/naturkostbladslog01.png" alt="vores logo">
     </a>
+    <div id="headericons">
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+      <!-- BURGERMENU -->
+      <div class="burgercontainer">
+        <nav class="navbar">
+          <div class="burger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
+          </div>
+
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="omnaturkost.html" class="nav-link">Om Naturkost</a>
+            </li>
+            <li class="nav-item">
+              <a href="mad.html" class="nav-link">Mad</a>
+            </li>
+            <li class="nav-item">
+              <a href="hverdag.html" class="nav-link">Hverdag</a>
+            </li>
+            <li class="nav-item">
+              <a href="sundhed.html" class="nav-link">Sundhed</a>
+            </li>
+            <li class="nav-item">
+              <a href="andet.html" class="nav-link">Andet</a>
+            </li>
+            <li class="nav-item">
+              <a href="kontakt.html" class="nav-link">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+
+      <script src="burgerscript.js"></script>
   </header>
-  <div id="fronticons">
-    <a href="burger"><div id="burgermenu">
-      <div class="burger"></div>
-      <div class="burger"></div>
-      <div class="burger"></div>
-    </div></a>
-    <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
 
-  </div>
-
-    <div class="wrapper">
+  <div class="wrapper">
     <section class="container1">
       <img class="front1" src="img/ikoner/mad.png" alt="tallerken med bestik">
-        <a class="frontlink" href="mad.html">
-          <article class="front1text"><h2>Mad</h2></article></a>
+      <a class="frontlink" href="mad.html">
+        <article class="front1text">
+          <h2>Mad</h2>
+        </article>
+      </a>
 
     </section>
 
     <section class="container2">
       <img class="front2" src="img/ikoner/hverdag.png" alt="vækkeur">
-        <a class="frontlink" href="hverdag.html">
-          <article class="front2text"><h2>Hverdag</h2></article></a>
+      <a class="frontlink" href="hverdag.html">
+        <article class="front2text">
+          <h2>Hverdag</h2>
+        </article>
+      </a>
     </section>
 
     <section class="container3">
       <img class="front3" src="img/ikoner/sundhed.png" alt="pilleglas">
-        <a class="frontlink" href="sundhed.html">
-          <article class="front3text"><h2>Sundhed</h2></article></a>
+      <a class="frontlink" href="sundhed.html">
+        <article class="front3text">
+          <h2>Sundhed</h2>
+        </article>
+      </a>
     </section>
 
     <section class="container4">
       <img class="front4" src="img/ikoner/andet.png" alt="bunkepapir">
-        <a class="frontlink" href="andet.html">
-          <article class="front4text"><h2>Andet</h2></article></a>
+      <a class="frontlink" href="andet.html">
+        <article class="front4text">
+          <h2>Andet</h2>
+        </article>
+      </a>
     </section>
   </div>
 
-<footer id="frontfooter">
-  <p>&copy Naturkost 2020</p>
-</footer>
+  <footer id="frontfooter">
+    <p>&copy Naturkost 2020</p>
+  </footer>
 
 </body>
 
