--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -1,46 +1,71 @@
 <!DOCTYPE html>
 <html lang=da dir="ltr">
-  <head>
-	  <meta charset="utf-8">
-    <title>Om Naturkost Odense</title>
-    <meta name=”description” content=”Økologiske produkter”>
-    <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="styling.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  </head>
-  <body>
-<!-- HEADER -->
-    <header>
-      <h1>OM NATURKOST</h1>
-      <a href="main.html">
+
+<head>
+  <meta charset="utf-8">
+  <title>Om Naturkost Odense</title>
+  <meta name=”description” content=”Økologiske produkter”>
+  <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="styling.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <!-- HEADER -->
+  <header>
+    <h1>OM NATURKOST</h1>
+    <a href="main.html">
       <img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
-      </a>
-      <div id="headericons">
-        <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
-  <!-- BURGERMENU -->
-        <a href="burger">
-          <div id="burgermenu">
-            <div class="burger"></div>
-            <div class="burger"></div>
-            <div class="burger"></div>
+    </a>
+    <div id="headericons">
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+      <!-- BURGERMENU -->
+      <div class="burgercontainer">
+        <nav class="navbar">
+          <div class="burger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
           </div>
-        </a>
-      </div>
-    </header>
-<!-- MAIN -->
-    <main>
-      <div>
-        <video id="video1" src="video/prøvemedmusik.mp4" width="400" controls </video>
+
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="omnaturkost.html" class="nav-link">Om Naturkost</a>
+            </li>
+            <li class="nav-item">
+              <a href="mad.html" class="nav-link">Mad</a>
+            </li>
+            <li class="nav-item">
+              <a href="hverdag.html" class="nav-link">Hverdag</a>
+            </li>
+            <li class="nav-item">
+              <a href="sundhed.html" class="nav-link">Sundhed</a>
+            </li>
+            <li class="nav-item">
+              <a href="andet.html" class="nav-link">Andet</a>
+            </li>
+            <li class="nav-item">
+              <a href="kontakt.html" class="nav-link">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
       </div>
 
-      <p> Naturkost Odense er en lokalejet forretning, der har ligget i hjertet af Odense siden 1972.
-        De har etableret sig i odenseanernes bevidsthed både på baggrund af deres brede sortiment af varer,
-        men især på grund af den personlige og professionelle betjening og vejledning, de tilbyder både faste og nye kunder.</p>
-    </main>
-<!-- FOOTER -->
-    <footer>
-      <p>&copy Naturkost 2020</p>
-    </footer>
-  </body>
+      <script src="burgerscript.js"></script>
+  </header>
+  <!-- MAIN -->
+  <main>
+    <div>
+      <video id="video1" src="vid/prøvemedmusik.mp4" controls autoplay </video> </div>
+        <p> Naturkost Odense er en lokalejet forretning, der har ligget i hjertet af Odense siden 1972.<br>
+        De har etableret sig i odenseanernes bevidsthed både på baggrund af deres brede <br> sortiment af varer,
+        og især på grund af den personlige og professionelle betjening og vejledning, de tilbyder både faste og nye kunder.</p>
+  </main>
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy Naturkost 2020</p>
+  </footer>
+</body>
+
 </html>
