--- a/sundhed.html
+++ b/sundhed.html
@@ -1,85 +1,112 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-	  <title>Sundhed - Naturkost Odense</title>
-    <link href="styling.css" rel="stylesheet" type="text/css">
-    <meta name=”description” content="Økologiske produkter">
-    <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="" type="text/css" href="css.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-  </head>
-  <body>
-<!-- HEADER -->
-    <header>
-      <h1>SUNDHED</h1>
-      <a href="main.html">
+
+<head>
+  <meta charset="utf-8">
+  <title>Sundhed - Naturkost Odense</title>
+  <link href="styling.css" rel="stylesheet" type="text/css">
+  <meta name=”description” content="Økologiske produkter">
+  <meta name=”keywords” content=”sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevarer,biodynamisk,velvære,naturkost”>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="" type="text/css" href="css.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+</head>
+
+<body>
+  <!-- HEADER -->
+  <header>
+    <h1>SUNDHED</h1>
+    <a href="main.html">
       <img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
-      </a>
-      <div id="headericons">
-        <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
-  <!-- BURGERMENU -->
-        <a href="burger">
-          <div id="burgermenu">
-            <div class="burger"></div>
-            <div class="burger"></div>
-            <div class="burger"></div>
+    </a>
+    <div id="headericons">
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+      <!-- BURGERMENU -->
+      <div class="burgercontainer">
+        <nav class="navbar">
+          <div class="burger-menu">
+            <div class="line line-1"></div>
+            <div class="line line-2"></div>
+            <div class="line line-3"></div>
           </div>
-        </a>
-      </div>
-    </header>
-<!-- MENU -->
-    <ul class="menu">
-      <li><a href="#cremer">CREMER</a></li>
-      <li><a href="#vitamintilskud">KOSTTILSKUD</a></li>
-      <li><a href="#leagemidler">LÆGEMIDLER</a></li>
-      <li><a href="#tilskud">TILSKUD</a></li>
-    </ul>
-<!-- MAIN -->
-    <main>
-      <h2 id="cremer">CREMER</h2>
-      <div class="kategoribilleder">
-        <img src="img/sundhed/cremer/aftersun.png" alt="Produktbillede af aftersun">
-        <img src="img/sundhed/cremer/antiaging.png" alt="Produktbillede af antiaging">
-        <img src="img/sundhed/cremer/bodylotion.png" alt="Produktbillede af bodylotion">
-        <img src="img/sundhed/cremer/creme.png" alt="Produktbillede af creme">
-        <img src="img/sundhed/cremer/facecream.png" alt="Produktbillede af facecream">
-        <img src="img/sundhed/cremer/sunlotion.png" alt="Produktbillede af sunlotion">
-      </div>
-      <div class="hylde"></div>
 
-      <h2 id="kosttilskud">KOSTTILSKUD</h2>
-      <div class="kategoribilleder">
-        <img src="img/sundhed/kosttilskud/calmag.png" alt="Produktbillede af calmag">
-        <img src="img/sundhed/kosttilskud/granatæble.png" alt="Produktbillede af granatæble">
-        <img src="img/sundhed/kosttilskud/mave.png" alt="Produktbillede af mave">
-        <img src="img/sundhed/kosttilskud/overgangsalderen.png" alt="Produktbillede af overgangsalderen">
-        <img src="img/sundhed/kosttilskud/øjenkosttilskud.png" alt="Produktbillede af øjenkosttilskud">
+          <ul class="nav-list">
+            <li class="nav-item">
+              <a href="omnaturkost.html" class="nav-link">Om Naturkost</a>
+            </li>
+            <li class="nav-item">
+              <a href="mad.html" class="nav-link">Mad</a>
+            </li>
+            <li class="nav-item">
+              <a href="hverdag.html" class="nav-link">Hverdag</a>
+            </li>
+            <li class="nav-item">
+              <a href="sundhed.html" class="nav-link">Sundhed</a>
+            </li>
+            <li class="nav-item">
+              <a href="andet.html" class="nav-link">Andet</a>
+            </li>
+            <li class="nav-item">
+              <a href="kontakt.html" class="nav-link">Kontakt</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <div class="hylde"></div>
 
-      <h2 id="leagemidler">LÆGEMIDLER</h2>
-      <div class="kategoribilleder">
-        <img src="img/sundhed/leagemidler/forkølelse.png" alt="Produktbillede af forkølelse">
-        <img src="img/sundhed/leagemidler/husk.png" alt="Produktbillede af husk">
-        <img src="img/sundhed/leagemidler/næseskyl.png" alt="Produktbillede af næseskyl">
-        <img src="img/sundhed/leagemidler/prostasan.png" alt="Produktbillede af prostasan">
-        <img src="img/sundhed/leagemidler/valerina.png" alt="Produktbillede af valerina">
-        <img src="img/sundhed/leagemidler/velzina.png" alt="Produktbillede af velzina">
-      </div>
-      <div class="hylde"></div>
+      <script src="burgerscript.js"></script>
+  </header>
+  <!-- MENU -->
+  <ul class="menu">
+    <li><a href="#cremer">CREMER</a></li>
+    <li><a href="#vitamintilskud">KOSTTILSKUD</a></li>
+    <li><a href="#leagemidler">LÆGEMIDLER</a></li>
+    <li><a href="#tilskud">TILSKUD</a></li>
+  </ul>
+  <!-- MAIN -->
+  <main>
+    <h2 id="cremer">CREMER</h2>
+    <div class="kategoribilleder">
+      <img src="img/sundhed/cremer/aftersun.png" alt="Produktbillede af aftersun">
+      <img src="img/sundhed/cremer/antiaging.png" alt="Produktbillede af antiaging">
+      <img src="img/sundhed/cremer/bodylotion.png" alt="Produktbillede af bodylotion">
+      <img src="img/sundhed/cremer/creme.png" alt="Produktbillede af creme">
+      <img src="img/sundhed/cremer/facecream.png" alt="Produktbillede af facecream">
+      <img src="img/sundhed/cremer/sunlotion.png" alt="Produktbillede af sunlotion">
+    </div>
+    <div class="hylde"></div>
 
-      <h2 id="tilskud">TILSKUD</h2>
-      <div class="kategoribilleder">
-        <img src="img/sundhed/tilskud/jernm.png" alt="Produktbillede af jernm">
-        <img src="img/sundhed/tilskud/magnesium.png" alt="Produktbillede af magnesium">
-      </div>
-      <div class="hylde"></div>
-    </main>
-<!-- FOOTER -->
-    <footer>
-      <p>&copy Naturkost 2020</p>
-    </footer>
-  </body>
+    <h2 id="kosttilskud">KOSTTILSKUD</h2>
+    <div class="kategoribilleder">
+      <img src="img/sundhed/kosttilskud/calmag.png" alt="Produktbillede af calmag">
+      <img src="img/sundhed/kosttilskud/granatæble.png" alt="Produktbillede af granatæble">
+      <img src="img/sundhed/kosttilskud/mave.png" alt="Produktbillede af mave">
+      <img src="img/sundhed/kosttilskud/overgangsalderen.png" alt="Produktbillede af overgangsalderen">
+      <img src="img/sundhed/kosttilskud/øjenkosttilskud.png" alt="Produktbillede af øjenkosttilskud">
+    </div>
+    <div class="hylde"></div>
+
+    <h2 id="leagemidler">LÆGEMIDLER</h2>
+    <div class="kategoribilleder">
+      <img src="img/sundhed/leagemidler/forkølelse.png" alt="Produktbillede af forkølelse">
+      <img src="img/sundhed/leagemidler/husk.png" alt="Produktbillede af husk">
+      <img src="img/sundhed/leagemidler/næseskyl.png" alt="Produktbillede af næseskyl">
+      <img src="img/sundhed/leagemidler/prostasan.png" alt="Produktbillede af prostasan">
+      <img src="img/sundhed/leagemidler/valerina.png" alt="Produktbillede af valerina">
+      <img src="img/sundhed/leagemidler/velzina.png" alt="Produktbillede af velzina">
+    </div>
+    <div class="hylde"></div>
+
+    <h2 id="tilskud">TILSKUD</h2>
+    <div class="kategoribilleder">
+      <img src="img/sundhed/tilskud/jernm.png" alt="Produktbillede af jernm">
+      <img src="img/sundhed/tilskud/magnesium.png" alt="Produktbillede af magnesium">
+    </div>
+    <div class="hylde"></div>
+  </main>
+  <!-- FOOTER -->
+  <footer>
+    <p>&copy Naturkost 2020</p>
+  </footer>
+</body>
+
 </html>
