--- a/hverdag.html
+++ b/hverdag.html
@@ -17,7 +17,7 @@
 			<img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
 			</a>
       <div id="headericons">
-				<a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+				<a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a></div>
   <!-- BURGERMENU -->
 	<div class="burgercontainer">
 		<nav class="navbar">
