--- a/kontakt.html
+++ b/kontakt.html
@@ -19,7 +19,7 @@
       <img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
     </a>
     <div id="headericons">
-      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a></div>
       <!-- BURGERMENU -->
       <div class="burgercontainer">
         <nav class="navbar">
@@ -56,7 +56,7 @@
   </header>
   <!-- MAIN -->
   <main>
-    <h1>Kontakt Naturkost</h1>
+    <h2>Kontakt Naturkost</h2>
     <section id="kontaktsbox">
       <!-- ADRESSE -->
       <div class="kontakoplysninger">
@@ -84,7 +84,7 @@
     </section>
   </main>
   <!-- FOOTER -->
-  <footer id="frontfooter">
+  <footer class="fastfooter">
     <p>&copy Naturkost 2020</p>
   </footer>
 </body>
