--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
       <img id="logo" src="img/logo/naturkostbladslog01.png" alt="vores logo">
     </a>
     <div id="headericons">
-      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a></div>
       <!-- BURGERMENU -->
       <div class="burgercontainer">
         <nav class="navbar">
@@ -92,7 +92,7 @@
     </section>
   </div>
 
-  <footer id="frontfooter">
+  <footer class="fastfooter">
     <p>&copy Naturkost 2020</p>
   </footer>
 
