--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -14,12 +14,12 @@
 <body>
   <!-- HEADER -->
   <header>
-    <h1>OM NATURKOST</h1>
+    <h1>Hvem er vi?</h1>
     <a href="main.html">
       <img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
     </a>
     <div id="headericons">
-      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a></div>
       <!-- BURGERMENU -->
       <div class="burgercontainer">
         <nav class="navbar">
@@ -56,14 +56,14 @@
   </header>
   <!-- MAIN -->
   <main>
-    <div>
+    <div id="vidcontain">
       <video id="video1" src="vid/prøvemedmusik.mp4" controls autoplay </video> </div>
         <p> Naturkost Odense er en lokalejet forretning, der har ligget i hjertet af Odense siden 1972.<br>
         De har etableret sig i odenseanernes bevidsthed både på baggrund af deres brede <br> sortiment af varer,
         og især på grund af den personlige og professionelle betjening og vejledning, de tilbyder både faste og nye kunder.</p>
   </main>
   <!-- FOOTER -->
-  <footer>
+  <footer class="fastfooter">
     <p>&copy Naturkost 2020</p>
   </footer>
 </body>
