Change produkt and beskrivelse
'kurv.html' & 'styling.css'

--- a/kurv.html
+++ b/kurv.html
@@ -62,10 +62,10 @@
       <div id="kurvprodukt1">
         <button type="button" name="button" class="kurvsletknap" onclick="sletProdukt1()">&times;</button>
         <div class="kurvbillede">
-          <img src="img/ikoner/mad.png" alt="kurvproduktbillede">
+          <img src="img/mad/kaffeogte/unite.png" alt="kurvproduktbillede">
         </div>
         <div class="kurvbeskrivelse">
-          <p>Et produkt under 'Mad'-katagorien</p>
+          <p>Unite</p>
         </div>
         <div class="kurvplusminus">
           <button type="button" class="kurvminusknap" onclick="minusKnap1()">&minus;</button>
@@ -78,10 +78,10 @@
       <div id="kurvprodukt2">
         <button type="button" name="button" class="kurvsletknap" onclick="sletProdukt2()">&times;</button>
         <div class="kurvbillede">
-          <img src="img/ikoner/hverdag.png" alt="kurvproduktbillede">
+          <img src="img/hverdag/rengoering/foodwastebags.png" alt="kurvproduktbillede">
         </div>
         <div class="kurvbeskrivelse">
-          <p>Et produkt under 'Hverdag'-katagorien</p>
+          <p>Foodwastebags</p>
         </div>
         <div class="kurvplusminus">
           <button type="button" class="kurvminusknap" onclick="minusKnap2()">&minus;</button>
@@ -94,10 +94,10 @@
       <div id="kurvprodukt3">
         <button type="button" name="button" class="kurvsletknap" onclick="sletProdukt3()">&times;</button>
         <div class="kurvbillede">
-          <img src="img/ikoner/sundhed.png" alt="kurvproduktbillede">
+          <img src="img/sundhed/cremer/bodylotion.png" alt="kurvproduktbillede">
         </div>
         <div class="kurvbeskrivelse">
-          <p>Et produkt under 'Sundhed'-katagorien</p>
+          <p>Bodylotion</p>
         </div>
         <div class="kurvplusminus">
           <button type="button" class="kurvminusknap" onclick="minusKnap3()">&minus;</button>
