--- a/main.html
+++ b/main.html
@@ -14,7 +14,7 @@
 <body>
   <header>
     <a href="main.html">
-      <img id="logo" src="img/logo/naturkostbladslog01.png" alt="vores logo">
+      <img id="logo" src="img/logo/naturkostny01.png" alt="vores logo">
     </a>
     <div id="headericons">
       <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a></div>
