--- a/hverdag.html
+++ b/hverdag.html
@@ -14,7 +14,7 @@
   	<header>
       <h1>HVERDAG</h1>
 			<a href="main.html">
-			<img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
+			<img id="logo1" src="img/logo/naturkostny01.png" alt="vores logo">
 			</a>
       <div id="headericons">
 				<a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a></div>
