--- a/kontakt.html
+++ b/kontakt.html
@@ -16,7 +16,7 @@
   <header>
     <h1>KONTAKT</h1>
     <a href="main.html">
-      <img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
+      <img id="logo1" src="img/logo/naturkostny01.png" alt="vores logo">
     </a>
     <div id="headericons">
       <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a></div>
