--- a/kurv.html
+++ b/kurv.html
@@ -20,7 +20,8 @@
       <img id="logo1" src="img/logo/naturkostny01.png" alt="vores logo">
     </a>
     <div id="headericons">
-      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a></div>
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
+    </div>
       <!-- BURGERMENU -->
       <div class="burgercontainer">
         <nav class="navbar">
