--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -57,7 +57,7 @@
   <!-- MAIN -->
   <main>
     <div id="vidcontain">
-      <video id="video1" src="vid/prøvemedmusik.mp4" controls autoplay </video> </div>
+      <video id="video1" src="vid/omnaturkost.mp4" controls autoplay </video> </div>
         <p> Naturkost Odense er en lokalejet forretning, der har ligget i hjertet af Odense siden 1972.<br>
         De har etableret sig i odenseanernes bevidsthed både på baggrund af deres brede <br> sortiment af varer,
         og især på grund af den personlige og professionelle betjening og vejledning, de tilbyder både faste og nye kunder.</p>
